# lotl-detector

./: .gitignore  How to use me in the good way ;).md  README.md  TECHNICAL.md  pyproject.toml
config/: detector.yaml
lotl_detector/: __init__.py  __main__.py
lotl_detector/bpf/: __init__.py  loader.py  maps.py
lotl_detector/core/: __init__.py  config.py  database.py  logger.py  models.py  panic.py  shutdown.py
lotl_detector/detection/: __init__.py  ancestry.py  baseline.py  busybox.py
lotl_detector/detection/rules/: __init__.py  engine.py
lotl_detector/processes/: __init__.py  analyzer.py  collector.py  enforcer.py  logger_proc.py  supervisor.py
probes/: common.h  execve_trace.c  lsm_enforce.c  lsm_self_protect.c  memfd_trace.c  module_trace.c  ptrace_trace.c
rules/: ancestry_allowlist.yaml  tier1_blocklist.yaml  tier2_patterns.yaml
scripts/: enable_bpf_lsm.sh  install_deps.sh
systemd/: lotl-detector.service
tests/: __init__.py
tests/attack_simulations/: __init__.py  test_reverse_shells.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_baseline.py  test_config.py  test_models.py  test_rule_engine.py
